--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,14 +1,17 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit
+      (ingredientAdded)="onIngredientAdded($event)"
+      (ingredientDeleted)="onIngredientDeleted()"
+    ></app-shopping-edit>
     <hr />
     <ul class="list-group">
       <a
         class="list-group-item"
         style="cursor: pointer"
-        *ngFor="let ingrediant of ingrediants"
+        *ngFor="let ingredient of ingredients"
       >
-        {{ ingrediant.name }} ({{ ingrediant.amount }})</a
+        {{ ingredient.name }} ({{ ingredient.amount }})</a
       >
     </ul>
   </div>
