--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,7 +11,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle" type="button">
         Manage Recipe
         <span class="caret"></span>
@@ -20,7 +20,6 @@
         <li class=""><a href="#">To Shopping List</a></li>
         <li class=""><a href="#">Edit Recipe</a></li>
         <li class=""><a href="#">Delete Recipe</a></li>
-        delect recipe
       </ul>
     </div>
   </div>
