added router for recipe and shoping list

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,8 +22,8 @@
             >To Shopping List</a
           >
         </li>
-        <li class=""><a href="#">Edit Recipe</a></li>
-        <li class=""><a href="#">Delete Recipe</a></li>
+        <li class=""><a class="custom_class">Edit Recipe</a></li>
+        <li class=""><a class="custom_class">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
