--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,8 @@
-<a href="#" class="list-group-item clearfix" (click)="showRecipeDetails()">
+<a
+  class="list-group-item clearfix"
+  [routerLink]="[index]"
+  routerLinkActive="active"
+>
   <div class="pull-left">
     <h4 class="list-group-class-heading">{{ recipe.name }}</h4>
     <p class="list-group-item-text">
