--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -5,7 +5,7 @@
       [src]="recipe.imagePath"
       alt="{{ recipe.name }}"
       class="img-responsive"
-      style="max-height: 300px; aspect-ratio: 1"
+      style="max-height: 300px"
     />
   </div>
 </div>
@@ -22,7 +22,9 @@
             >To Shopping List</a
           >
         </li>
-        <li class=""><a class="custom_class">Edit Recipe</a></li>
+        <li class="">
+          <a class="custom_class" (click)="onEditRecipe()">Edit Recipe</a>
+        </li>
         <li class=""><a class="custom_class">Delete Recipe</a></li>
       </ul>
     </div>
