--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 .btn {
-  margin: 10px 10px 0 0;
+  margin-right: 10px;
 }
 a.custom_class {
   cursor: pointer;
