--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,8 +27,12 @@
             >Manage <span class="caret"></span
           ></a>
           <ul class="dropdown-menu">
-            <li><a class="custom_class">Save Data</a></li>
-            <li><a class="custom_class">Fetch Data</a></li>
+            <li>
+              <a class="custom_class" (click)="onSaveData()">Save Data</a>
+            </li>
+            <li>
+              <a class="custom_class" (click)="onFetchData()">Fetch Data</a>
+            </li>
           </ul>
         </li>
       </ul>
